@@ -775,13 +775,14 @@ function moveItem(baseUrl, moveType, tag) {
 }
 
 // ajax call managing a call to a given p_view_name and reload taking faceted into account
-function callViewAndReload(baseUrl, view_name, tag) {
+function callViewAndReload(baseUrl, view_name, tag, params) {
   redirect = '0';
   if (!$('#faceted-form').has(tag).length) {
     redirect = '1';
   }
   $.ajax({
     url: baseUrl + "/" + view_name,
+    data: params,
     dataType: 'html',
     cache: false,
     async: false,
